tests/errors/semantic/blocking/INHOMOGENEOUS_MAX.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = max(3, 4.5)
